@@ -5,6 +5,8 @@
 - Slightly relax timings in /umockdev-testbed/script_replay_simple test to
   avoid failure on slow machines.
 - preload: Wrap chmod() and inotify_add_watch().
+- Fix assertion on umockdev_testbed_uevent() if there are no listeners.
+  (issue #29)
 
 0.4.6 (2013-10-11)
 ------------------
